# Hiro

./: README.md  index.html  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  hiro_audit.jsonl  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  commands.rs  grounding.rs  lib.rs  main.rs  vlm.rs
