[package]
name = "hiro"
version = "0.1.0"
description = "Hiro Desktop Automation App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
enigo = "0.3.0"
scrap = "0.5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
lazy_static = "1.4"
is_elevated = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }




