[package]
name = "hiro"
version = "0.1.0"
description = "Hiro Desktop Automation App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hiro_lib"

crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }

serde_json = "1"
enigo = "0.3.0"
scrap = "0.5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
lazy_static = "1.4"
is_elevated = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
regex = "1.10"
rustautogui = "2.5.0"
headless_chrome = { version = "1.0.22", default-features = false }





